# gpushare

./: .gitignore  CLAUDE.md  CMakeLists.txt  COMPARISON.md  DEVELOPERS.md  GEMINI.md  README.md  ROADMAP.md  test_device  test_device.c
client/: generated_all_stubs.cpp  generated_stubs.cpp  gpu_tray_windows.pyw  gpushare_client.cpp  libcudart.version
codegen/: generate_stubs.py  parse_headers.py
config/: gpushare-client.conf  gpushare-server.conf
dashboard/: app.py
examples/: gpu.py  main.py  stress_test.py  test_basic.cpp  test_python.py  test_python_simple.py  test_pytorch.py  test_repro  verify_windows.py
include/gpushare/: compression.h  cuda_defs.h  protocol.h  rdma_transport.h  symbol_version.h  transport.h
python/: gpushare.pth  gpushare_hook.py  setup.py
python/gpushare/: __init__.py
scripts/: gpushare-patch  gpushare-patch-frameworks.py  gpushare.service  install-client-linux.sh  install-client-macos.sh  install-client-windows.ps1  install-server-arch.sh  nvidia-smi  nvidia-smi-wrapper.sh  setup-client.sh  setup-server.sh  uninstall-windows.ps1  uninstall.sh
server/: generated_all_dispatch.cpp  generated_dispatch.cpp  server.cpp
tui/: monitor.py
